[metadata]
name = hcheckup
version = attr: hcheckup.__version__
author = Keith Gorlen
author_email = kgorlen@gmail.com
description = Ping healthchecks.io.
long_description = file: README.md, LICENSE.txt
url = https://github.com/kgorlen/hcheckup
keywords = healthchecks
license = GPL-3.0-or-later
classifiers = 
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    build>=1.2.2.post1
    keyring>=25.6.0
    platformdirs>=4.3.8
    requests>=2.32.3

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    hcheckup = hcheckup.hcheckup:cli
